aws_terraform_vpc_intances_cxtrade_dev/instances.tf
# # Get Linux AMI ID using SSM parameter endpoint in us-east-1
# data "aws_ssm_parameter" "linuxAmi" {
#   provider = aws.region-master
#   name     = "/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2"
# }


# # Get Linux AMI ID using SSM parameter endpoint in us-west-2
# data "aws_ssm_parameter" "linuxAmiOregon" {
#   provider = aws.region-worker
#   name     = "/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2"
# }

# # Create key-pair for logging into EC2 in us-east-1
# resource "aws_key_pair" "master-key" {
#   provider   = aws.region-master
#   key_name   = "jenkins"
#   public_key = file("~/.ssh/id_rsa.pub")
# }

# # Create key-pair for logging into EC2 in us-west-2
# resource "aws_key_pair" "worker-key" {
#   provider   = aws.region-worker
#   key_name   = "jenkins"
#   public_key = file("~/.ssh/id_rsa.pub")
# }

# # Create and bootstrap EC2 in us-east-1
# # Not include in the course
# # data "aws_ami" "ubuntu" {
# #   most_recent = true

# #   filter {
# #     name   = "name"
# #     values = ["ubuntu/images/hvm-ssd/ubuntu-focal-20.04-amd64-server-*"]
# #   }

# #   filter {
# #     name   = "virtualization-type"
# #     values = ["hvm"]
# #   }

# #   owners = ["099720109477"] # Canonical
# # }

# resource "aws_instance" "jenkins-master" {
#   provider                    = aws.region-master
#   ami                         = data.aws_ssm_parameter.linuxAmi.value
#   instance_type               = var.instance-type
#   key_name                    = aws_key_pair.master-key.key_name
#   associate_public_ip_address = true
#   vpc_security_group_ids      = [aws_security_group.jenkins-sg.id]
#   subnet_id                   = aws_subnet.subnet_1.id

#   tags = {
#     Name = "jenkins_master_tf"
#   }

#   depends_on = [aws_main_route_table_association.set-master-default-rt-assoc]

#   provisioner "local-exec" {
#     command = <<EOF
#     aws --profile ${var.profile} ec2 wait instance-status-ok --region ${var.region-master} --instance-ids ${self.id}
#     ansible-playbook --extra-vars 'passed_in_hosts=tag_Name_${self.tags.Name}' ansible_templates/jenkins-master-sample.yml
#     EOF
#   }
# }

# resource "aws_instance" "jenkins-worker-oregon" {
#   provider                    = aws.region-worker
#   count                       = var.workers-count
#   ami                         = data.aws_ssm_parameter.linuxAmiOregon.value
#   instance_type               = var.instance-type
#   key_name                    = aws_key_pair.worker-key.key_name
#   associate_public_ip_address = true
#   vpc_security_group_ids      = [aws_security_group.jenkins-sg-oregon.id]
#   subnet_id                   = aws_subnet.subnet_1_oregon.id

#   tags = {
#     Name = join("_", ["jenkins_worker_tf", count.index + 1])
#   }

#   depends_on = [aws_main_route_table_association.set-worker-default-rt-assoc, aws_instance.jenkins-master]

#   provisioner "local-exec" {
#     command = <<EOF
#     aws --profile ${var.profile} ec2 wait instance-status-ok --region ${var.region-worker} --instance-ids ${self.id}
#     ansible-playbook --extra-vars 'passed_in_hosts=tag_Name_${self.tags.Name}' ansible_templates/jenkins-worker-sample.yml
#     EOF
#   }
# }
